[tool.poetry]
name = "io"
version = "0.1.0"
description = ""
authors = ["Leo Kukharau <leo.kukharau@microsoft.com>"]

[tool.poetry.dependencies]
python = "3.10"
windows-curses = "^2.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
